--- a/Angular Front end/my-angular-app/src/app/component/header/header.component.html
+++ b/Angular Front end/my-angular-app/src/app/component/header/header.component.html
@@ -1,3 +1,8 @@
-<mat-slide-toggle>Toggle me!</mat-slide-toggle>
-
-
+<mat-toolbar color="primary" role="heading">
+  <mat-toolbar-row>
+    <mat-icon style="cursor:pointer; color: white " (click)="toggleMenu()">menu</mat-icon>
+    <span>  project Name</span>
+    <span class="example-spacer"></span>
+    <mat-icon style="cursor:pointer ;color:red"  >logout</mat-icon>
+  </mat-toolbar-row>
+</mat-toolbar>
