--- a/Angular Front end/my-angular-app/src/app/component/header/header.component.html
+++ b/Angular Front end/my-angular-app/src/app/component/header/header.component.html
@@ -21,14 +21,18 @@
           <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/admin">Admin Dashboard</a>
+          <a class="nav-link active" aria-current="page" routerLink="/admin"
+
+          *ngIf="userService.roleEqual(['Admin'])">Admin Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/user">User Dashboard</a>
+          <a class="nav-link active" aria-current="page" routerLink="/user"
+          *ngIf="userService.roleEqual(['User'])">User Dashboard</a>
         </li>
       </ul>
-      <button type="submit" class="btn btn-success" routerLink="/login">Login</button>
-      <button type="submit" class="btn btn-danger">Logout</button>
+      <button *ngIf="!isLoggedIn()" type="submit" class="btn btn-success" routerLink="/login">Login</button>
+      <button  *ngIf="isLoggedIn()"type="submit" class="btn btn-danger"(click)="logout()">Logout</button>
     </div>
   </div>
 </nav>
+
